css/main.css
body {
  background-color: lightblue;
}

h1 {
  text-align: center;
}

#intro {
    background-color: lightgreen;
    width: 30%;
    height: 10em;
    text-align: center;
    display: flex;
    align-items: center;
    border: 2px solid green;
    margin-left: 30px;
}

#git_1 {
    background-color: red;
    width: 30%;
    height: 10em;
    text-align: center;
    display: flex;
    align-items: center;
    border: 2px solid black;
    margin-left: 50px;
    margin-top: 30px;
}

#git_2 {
    background-color: orange;
    width: 30%;
    height: 10em;
    text-align: center;
    display: flex;
    align-items: center;
    border: 2px solid red;
    margin-left: 70px;
    margin-top: 30px;

}

#git_2 .container ol {
  text-align: left;
}

#git_3 {
  background-color: yellow;
  width: 30%;
  height: 10em;
  text-align: center;
  display: flex;
  align-items: center;
  border: 2px solid blue;
  margin-left: 90px;
  margin-top: 30px;
}

#git_3 .container ol {
  text-align: left;
}

#git_4 {
  background-color: green;
}

#git_5 {
  background-color: blue;
}

#git_6 {
    background-color: purple;
}

